# VISTA-Track

./: .gitignore  README.md  pyproject.toml
data_generation/: README.md
data_generation/synthetic_v7_3/: README_GENERATED_DATASET_RECOVERY_20260614.md  run_v1_optimized.sh
data_generation/synthetic_v7_3/configs/: dataset_true_mv_v7_2_realism_pilot.yaml  dataset_true_mv_v7_3_photometric_pilot.yaml  dataset_true_mv_v7_3_photometric_pilot20.yaml  dataset_v0.yaml  dataset_v1.yaml  dataset_v2_appearance_probe.yaml  synmvtrack_train.yaml
data_generation/synthetic_v7_3/generator/: __init__.py  audit_render_quality.py  build_3dfront_scene_index.py  build_3dfront_target_index.py  build_scene_index.py  build_target_index.py  export_annotations.py  generate_dataset.py  preprocess_targets.py  real_background_composite.py  render_sequence.py  sample_camera_rig.py  sample_distractors.py  sample_occluders.py  sample_scene.py  sample_target.py  sample_trajectory.py  write_mvtrack_format.py
data_generation/ue5_mv_generator/: README.md  auto_deploy_and_run.sh  build_ue_editor_target.sh  build_ue_project.sh  monitor_and_build.sh  run_ue5_worker.sh  setup_ue5.sh
docs/: project-memory.md  roadmap.md
scripts/: backup_to_github.sh
training/: README.md
training/configs/: stage1_real_qclean.yaml
training/notes/: query_clean_temporal_learning.md
training/patches/: README.md
training/scripts/: start_stage1_real_qclean_after_warmup20.sh  train_stage1_real_qclean.sh
vista_track/: __init__.py  data_mixture.py  dynamic_template.py  metrics.py  query_clean.py  trackingnet_zip.py
(+87 files in other folders)
