[project]
name = "vista-track"
version = "0.1.0"
description = "View-Invariant Spatio-Temporal Association for Multi-View Single Object Tracking"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "torch",
  "opencv-python",
]

[tool.setuptools]
packages = ["vista_track"]
